delete EggsFrame class and create EggFRames class and fix other bugs